LBSD-2376 Implements fix to avoid items overlapping in admin timeline LBSD-2373 Fix: Users comments don't appear in the panel if comments enabled at blog level Release v3.6.4 - Bumped theme versions and some minors improvements

--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -870,3 +870,12 @@
 .cursor-pointer {
     cursor: pointer;
 }
+
+.lb-mainitem-advertisement_remote {
+    // forcing positioning to relative to avoid overlapping
+    // sometimes instagram embed renders a bit late and produce an overlapping
+    // issue with other posts in admin interface
+    iframe.instagram-media {
+        position: relative !important;
+    }
+}
